--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,18 @@
     opacity: 0.5;
     z-index: -1;
 }
+.menu{
+    background: rgb(166, 173, 218);
+}
+.pagdos{
+    background-image: url(./img/capacitacion.jpg);
+    padding: 25%;
+    background-attachment: fixed;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+.text-white{
+    text-align: center;
+}
